@@ -12,12 +12,15 @@ UPDATED FUNCTIONS:
   * Quantile() returns a named result.
   * Outlier() gets a new option "hampel". 
   * TOne() allows to omit test by setting TEST=NA.
+  * BinomCI() gets three more methods "waldcc", "midp" and "lik".
   
 BUGFIXES:
   * Bug in Zodiac() led to a wrong zodiac for June 21. (Credits to pmarkun)
   * plot.Desc.numnum() will respect given xlab/ylab now.
   * TOne() adapts the number of column names if the total sum is suppressed.
   * Warning in print.Desc.numfact has been fixed.
+  * BinomCI for the method wilsoncc would not have returned the correct values
+    in cases the estimator was 0 or 1. (Credits to Martin Mayer)
   
 
 
@@ -32,7 +35,7 @@ NEW FUNCTIONS ADDED:
   * MADCI() calculates confidence intervals for the median absolute deviation(s).
   * QuantileCI() yields confidence intervals for any quantile.
   * BinomCIn() returns the sample size which is necessary to obtain a confidence
-    interval with a given with, at a specified p and confidence level.
+    interval with a given width, at a specified p and confidence level.
 
 UPDATED FUNCTIONS:
   * The Format() argument "leading" has been replaced by "ldigits". Leading zeros
@@ -46,7 +49,7 @@ UPDATED FUNCTIONS:
 
   
 BUGFIXES:
-  * Bug in BinomDiffCI() for methods score and scorecc have been corrected.
+  * Bug in BinomDiffCI() for methods score and scorecc has been fixed.
     (Credits to Meredith Peratikos)
 
 
